// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`関数 1 1`] = `
"{
  \\"name\\": \\"Program\\",
  \\"children\\": {
    \\"rules\\": [
      {
        \\"name\\": \\"ProgramRule\\",
        \\"children\\": {
          \\"rules\\": [
            {
              \\"name\\": \\"Function\\",
              \\"children\\": {
                \\"FunctionToken\\": [
                  {
                    \\"image\\": \\"function\\",
                    \\"startOffset\\": 5,
                    \\"endOffset\\": 12,
                    \\"startLine\\": 2,
                    \\"endLine\\": 2,
                    \\"startColumn\\": 5,
                    \\"endColumn\\": 12,
                    \\"tokenTypeIdx\\": 35,
                    \\"tokenType\\": {
                      \\"name\\": \\"FunctionToken\\",
                      \\"PATTERN\\": {},
                      \\"tokenTypeIdx\\": 35,
                      \\"CATEGORIES\\": [],
                      \\"categoryMatches\\": [],
                      \\"categoryMatchesMap\\": {},
                      \\"isParent\\": false
                    }
                  }
                ],
                \\"FunctionNameToken\\": [
                  {
                    \\"image\\": \\"out(\\",
                    \\"startOffset\\": 14,
                    \\"endOffset\\": 17,
                    \\"startLine\\": 2,
                    \\"endLine\\": 2,
                    \\"startColumn\\": 14,
                    \\"endColumn\\": 17,
                    \\"tokenTypeIdx\\": 47,
                    \\"tokenType\\": {
                      \\"name\\": \\"FunctionNameToken\\",
                      \\"PATTERN\\": {},
                      \\"tokenTypeIdx\\": 47,
                      \\"CATEGORIES\\": [],
                      \\"categoryMatches\\": [],
                      \\"categoryMatchesMap\\": {},
                      \\"isParent\\": false
                    }
                  }
                ],
                \\"arguments\\": [
                  {
                    \\"name\\": \\"FunctionArguments\\",
                    \\"children\\": {
                      \\"Identifier\\": [
                        {
                          \\"image\\": \\"str\\",
                          \\"startOffset\\": 18,
                          \\"endOffset\\": 20,
                          \\"startLine\\": 2,
                          \\"endLine\\": 2,
                          \\"startColumn\\": 18,
                          \\"endColumn\\": 20,
                          \\"tokenTypeIdx\\": 10,
                          \\"tokenType\\": {
                            \\"name\\": \\"Identifier\\",
                            \\"PATTERN\\": {},
                            \\"tokenTypeIdx\\": 10,
                            \\"CATEGORIES\\": [],
                            \\"categoryMatches\\": [],
                            \\"categoryMatchesMap\\": {},
                            \\"isParent\\": false
                          }
                        }
                      ]
                    }
                  }
                ],
                \\"RBrackets\\": [
                  {
                    \\"image\\": \\")\\",
                    \\"startOffset\\": 21,
                    \\"endOffset\\": 21,
                    \\"startLine\\": 2,
                    \\"endLine\\": 2,
                    \\"startColumn\\": 21,
                    \\"endColumn\\": 21,
                    \\"tokenTypeIdx\\": 12,
                    \\"tokenType\\": {
                      \\"name\\": \\"RBrackets\\",
                      \\"PATTERN\\": {},
                      \\"tokenTypeIdx\\": 12,
                      \\"CATEGORIES\\": [],
                      \\"categoryMatches\\": [],
                      \\"categoryMatchesMap\\": {},
                      \\"isParent\\": false,
                      \\"LABEL\\": \\")\\"
                    }
                  }
                ],
                \\"LCurly\\": [
                  {
                    \\"image\\": \\"{\\",
                    \\"startOffset\\": 23,
                    \\"endOffset\\": 23,
                    \\"startLine\\": 2,
                    \\"endLine\\": 2,
                    \\"startColumn\\": 23,
                    \\"endColumn\\": 23,
                    \\"tokenTypeIdx\\": 13,
                    \\"tokenType\\": {
                      \\"name\\": \\"LCurly\\",
                      \\"PATTERN\\": {},
                      \\"tokenTypeIdx\\": 13,
                      \\"CATEGORIES\\": [],
                      \\"categoryMatches\\": [],
                      \\"categoryMatchesMap\\": {},
                      \\"isParent\\": false,
                      \\"LABEL\\": \\"{\\"
                    }
                  }
                ],
                \\"rules\\": [
                  {
                    \\"name\\": \\"Program\\",
                    \\"children\\": {
                      \\"rules\\": [
                        {
                          \\"name\\": \\"ProgramRule\\",
                          \\"children\\": {
                            \\"rules\\": [
                              {
                                \\"name\\": \\"Assignment\\",
                                \\"children\\": {
                                  \\"rules\\": [
                                    {
                                      \\"name\\": \\"ToRight\\",
                                      \\"children\\": {
                                        \\"head\\": [
                                          {
                                            \\"name\\": \\"LogicExpression\\",
                                            \\"children\\": {
                                              \\"rules\\": [
                                                {
                                                  \\"name\\": \\"RelationExpression\\",
                                                  \\"children\\": {
                                                    \\"rules\\": [
                                                      {
                                                        \\"name\\": \\"Expression\\",
                                                        \\"children\\": {
                                                          \\"rules\\": [
                                                            {
                                                              \\"name\\": \\"Term\\",
                                                              \\"children\\": {
                                                                \\"rules\\": [
                                                                  {
                                                                    \\"name\\": \\"PipeExpression\\",
                                                                    \\"children\\": {
                                                                      \\"from\\": [
                                                                        {
                                                                          \\"name\\": \\"RangeExpression\\",
                                                                          \\"children\\": {
                                                                            \\"rules\\": [
                                                                              {
                                                                                \\"name\\": \\"Factor\\",
                                                                                \\"children\\": {
                                                                                  \\"Identifier\\": [
                                                                                    {
                                                                                      \\"image\\": \\"str\\",
                                                                                      \\"startOffset\\": 31,
                                                                                      \\"endOffset\\": 33,
                                                                                      \\"startLine\\": 3,
                                                                                      \\"endLine\\": 3,
                                                                                      \\"startColumn\\": 7,
                                                                                      \\"endColumn\\": 9,
                                                                                      \\"tokenTypeIdx\\": 10,
                                                                                      \\"tokenType\\": {
                                                                                        \\"name\\": \\"Identifier\\",
                                                                                        \\"PATTERN\\": {},
                                                                                        \\"tokenTypeIdx\\": 10,
                                                                                        \\"CATEGORIES\\": [],
                                                                                        \\"categoryMatches\\": [],
                                                                                        \\"categoryMatchesMap\\": {},
                                                                                        \\"isParent\\": false
                                                                                      }
                                                                                    }
                                                                                  ]
                                                                                }
                                                                              }
                                                                            ]
                                                                          }
                                                                        }
                                                                      ],
                                                                      \\"PipeToken\\": [
                                                                        {
                                                                          \\"image\\": \\"|>\\",
                                                                          \\"startOffset\\": 35,
                                                                          \\"endOffset\\": 36,
                                                                          \\"startLine\\": 3,
                                                                          \\"endLine\\": 3,
                                                                          \\"startColumn\\": 11,
                                                                          \\"endColumn\\": 12,
                                                                          \\"tokenTypeIdx\\": 41,
                                                                          \\"tokenType\\": {
                                                                            \\"name\\": \\"PipeToken\\",
                                                                            \\"PATTERN\\": {},
                                                                            \\"tokenTypeIdx\\": 41,
                                                                            \\"CATEGORIES\\": [],
                                                                            \\"categoryMatches\\": [],
                                                                            \\"categoryMatchesMap\\": {},
                                                                            \\"isParent\\": false
                                                                          }
                                                                        }
                                                                      ],
                                                                      \\"tail\\": [
                                                                        {
                                                                          \\"name\\": \\"RangeExpression\\",
                                                                          \\"children\\": {
                                                                            \\"rules\\": [
                                                                              {
                                                                                \\"name\\": \\"Factor\\",
                                                                                \\"children\\": {
                                                                                  \\"Identifier\\": [
                                                                                    {
                                                                                      \\"image\\": \\"console\\",
                                                                                      \\"startOffset\\": 38,
                                                                                      \\"endOffset\\": 44,
                                                                                      \\"startLine\\": 3,
                                                                                      \\"endLine\\": 3,
                                                                                      \\"startColumn\\": 14,
                                                                                      \\"endColumn\\": 20,
                                                                                      \\"tokenTypeIdx\\": 10,
                                                                                      \\"tokenType\\": {
                                                                                        \\"name\\": \\"Identifier\\",
                                                                                        \\"PATTERN\\": {},
                                                                                        \\"tokenTypeIdx\\": 10,
                                                                                        \\"CATEGORIES\\": [],
                                                                                        \\"categoryMatches\\": [],
                                                                                        \\"categoryMatchesMap\\": {},
                                                                                        \\"isParent\\": false
                                                                                      }
                                                                                    }
                                                                                  ]
                                                                                }
                                                                              }
                                                                            ]
                                                                          }
                                                                        }
                                                                      ]
                                                                    }
                                                                  }
                                                                ]
                                                              }
                                                            }
                                                          ]
                                                        }
                                                      }
                                                    ]
                                                  }
                                                }
                                              ]
                                            }
                                          }
                                        ]
                                      }
                                    }
                                  ]
                                }
                              }
                            ]
                          }
                        }
                      ]
                    }
                  }
                ],
                \\"RCurly\\": [
                  {
                    \\"image\\": \\"}\\",
                    \\"startOffset\\": 50,
                    \\"endOffset\\": 50,
                    \\"startLine\\": 4,
                    \\"endLine\\": 4,
                    \\"startColumn\\": 5,
                    \\"endColumn\\": 5,
                    \\"tokenTypeIdx\\": 14,
                    \\"tokenType\\": {
                      \\"name\\": \\"RCurly\\",
                      \\"PATTERN\\": {},
                      \\"tokenTypeIdx\\": 14,
                      \\"CATEGORIES\\": [],
                      \\"categoryMatches\\": [],
                      \\"categoryMatchesMap\\": {},
                      \\"isParent\\": false,
                      \\"LABEL\\": \\"}\\"
                    }
                  }
                ]
              }
            }
          ]
        }
      },
      {
        \\"name\\": \\"ProgramRule\\",
        \\"children\\": {
          \\"rules\\": [
            {
              \\"name\\": \\"Assignment\\",
              \\"children\\": {
                \\"rules\\": [
                  {
                    \\"name\\": \\"ToRight\\",
                    \\"children\\": {
                      \\"head\\": [
                        {
                          \\"name\\": \\"LogicExpression\\",
                          \\"children\\": {
                            \\"rules\\": [
                              {
                                \\"name\\": \\"RelationExpression\\",
                                \\"children\\": {
                                  \\"rules\\": [
                                    {
                                      \\"name\\": \\"Expression\\",
                                      \\"children\\": {
                                        \\"rules\\": [
                                          {
                                            \\"name\\": \\"Term\\",
                                            \\"children\\": {
                                              \\"rules\\": [
                                                {
                                                  \\"name\\": \\"PipeExpression\\",
                                                  \\"children\\": {
                                                    \\"from\\": [
                                                      {
                                                        \\"name\\": \\"RangeExpression\\",
                                                        \\"children\\": {
                                                          \\"rules\\": [
                                                            {
                                                              \\"name\\": \\"Factor\\",
                                                              \\"children\\": {
                                                                \\"StringLiteral\\": [
                                                                  {
                                                                    \\"image\\": \\"\\\\\\"str\\\\\\"\\",
                                                                    \\"startOffset\\": 56,
                                                                    \\"endOffset\\": 60,
                                                                    \\"startLine\\": 5,
                                                                    \\"endLine\\": 5,
                                                                    \\"startColumn\\": 5,
                                                                    \\"endColumn\\": 9,
                                                                    \\"tokenTypeIdx\\": 4,
                                                                    \\"tokenType\\": {
                                                                      \\"name\\": \\"StringLiteral\\",
                                                                      \\"PATTERN\\": {},
                                                                      \\"tokenTypeIdx\\": 4,
                                                                      \\"CATEGORIES\\": [],
                                                                      \\"categoryMatches\\": [],
                                                                      \\"categoryMatchesMap\\": {},
                                                                      \\"isParent\\": false
                                                                    }
                                                                  }
                                                                ]
                                                              }
                                                            }
                                                          ]
                                                        }
                                                      }
                                                    ],
                                                    \\"PipeToken\\": [
                                                      {
                                                        \\"image\\": \\"|>\\",
                                                        \\"startOffset\\": 62,
                                                        \\"endOffset\\": 63,
                                                        \\"startLine\\": 5,
                                                        \\"endLine\\": 5,
                                                        \\"startColumn\\": 11,
                                                        \\"endColumn\\": 12,
                                                        \\"tokenTypeIdx\\": 41,
                                                        \\"tokenType\\": {
                                                          \\"name\\": \\"PipeToken\\",
                                                          \\"PATTERN\\": {},
                                                          \\"tokenTypeIdx\\": 41,
                                                          \\"CATEGORIES\\": [],
                                                          \\"categoryMatches\\": [],
                                                          \\"categoryMatchesMap\\": {},
                                                          \\"isParent\\": false
                                                        }
                                                      }
                                                    ],
                                                    \\"tail\\": [
                                                      {
                                                        \\"name\\": \\"RangeExpression\\",
                                                        \\"children\\": {
                                                          \\"rules\\": [
                                                            {
                                                              \\"name\\": \\"Factor\\",
                                                              \\"children\\": {
                                                                \\"Identifier\\": [
                                                                  {
                                                                    \\"image\\": \\"out\\",
                                                                    \\"startOffset\\": 65,
                                                                    \\"endOffset\\": 67,
                                                                    \\"startLine\\": 5,
                                                                    \\"endLine\\": 5,
                                                                    \\"startColumn\\": 14,
                                                                    \\"endColumn\\": 16,
                                                                    \\"tokenTypeIdx\\": 10,
                                                                    \\"tokenType\\": {
                                                                      \\"name\\": \\"Identifier\\",
                                                                      \\"PATTERN\\": {},
                                                                      \\"tokenTypeIdx\\": 10,
                                                                      \\"CATEGORIES\\": [],
                                                                      \\"categoryMatches\\": [],
                                                                      \\"categoryMatchesMap\\": {},
                                                                      \\"isParent\\": false
                                                                    }
                                                                  }
                                                                ]
                                                              }
                                                            }
                                                          ]
                                                        }
                                                      }
                                                    ]
                                                  }
                                                }
                                              ]
                                            }
                                          }
                                        ]
                                      }
                                    }
                                  ]
                                }
                              }
                            ]
                          }
                        }
                      ]
                    }
                  }
                ]
              }
            }
          ]
        }
      }
    ]
  }
}"
`;

exports[`関数 2 1`] = `
"{
  \\"name\\": \\"Program\\",
  \\"children\\": {
    \\"rules\\": [
      {
        \\"name\\": \\"ProgramRule\\",
        \\"children\\": {
          \\"rules\\": [
            {
              \\"name\\": \\"Function\\",
              \\"children\\": {
                \\"FunctionToken\\": [
                  {
                    \\"image\\": \\"function\\",
                    \\"startOffset\\": 5,
                    \\"endOffset\\": 12,
                    \\"startLine\\": 2,
                    \\"endLine\\": 2,
                    \\"startColumn\\": 5,
                    \\"endColumn\\": 12,
                    \\"tokenTypeIdx\\": 35,
                    \\"tokenType\\": {
                      \\"name\\": \\"FunctionToken\\",
                      \\"PATTERN\\": {},
                      \\"tokenTypeIdx\\": 35,
                      \\"CATEGORIES\\": [],
                      \\"categoryMatches\\": [],
                      \\"categoryMatchesMap\\": {},
                      \\"isParent\\": false
                    }
                  }
                ],
                \\"FunctionNameToken\\": [
                  {
                    \\"image\\": \\"out(\\",
                    \\"startOffset\\": 14,
                    \\"endOffset\\": 17,
                    \\"startLine\\": 2,
                    \\"endLine\\": 2,
                    \\"startColumn\\": 14,
                    \\"endColumn\\": 17,
                    \\"tokenTypeIdx\\": 47,
                    \\"tokenType\\": {
                      \\"name\\": \\"FunctionNameToken\\",
                      \\"PATTERN\\": {},
                      \\"tokenTypeIdx\\": 47,
                      \\"CATEGORIES\\": [],
                      \\"categoryMatches\\": [],
                      \\"categoryMatchesMap\\": {},
                      \\"isParent\\": false
                    }
                  }
                ],
                \\"arguments\\": [
                  {
                    \\"name\\": \\"FunctionArguments\\",
                    \\"children\\": {
                      \\"Identifier\\": [
                        {
                          \\"image\\": \\"str\\",
                          \\"startOffset\\": 18,
                          \\"endOffset\\": 20,
                          \\"startLine\\": 2,
                          \\"endLine\\": 2,
                          \\"startColumn\\": 18,
                          \\"endColumn\\": 20,
                          \\"tokenTypeIdx\\": 10,
                          \\"tokenType\\": {
                            \\"name\\": \\"Identifier\\",
                            \\"PATTERN\\": {},
                            \\"tokenTypeIdx\\": 10,
                            \\"CATEGORIES\\": [],
                            \\"categoryMatches\\": [],
                            \\"categoryMatchesMap\\": {},
                            \\"isParent\\": false
                          }
                        }
                      ]
                    }
                  }
                ],
                \\"RBrackets\\": [
                  {
                    \\"image\\": \\")\\",
                    \\"startOffset\\": 21,
                    \\"endOffset\\": 21,
                    \\"startLine\\": 2,
                    \\"endLine\\": 2,
                    \\"startColumn\\": 21,
                    \\"endColumn\\": 21,
                    \\"tokenTypeIdx\\": 12,
                    \\"tokenType\\": {
                      \\"name\\": \\"RBrackets\\",
                      \\"PATTERN\\": {},
                      \\"tokenTypeIdx\\": 12,
                      \\"CATEGORIES\\": [],
                      \\"categoryMatches\\": [],
                      \\"categoryMatchesMap\\": {},
                      \\"isParent\\": false,
                      \\"LABEL\\": \\")\\"
                    }
                  }
                ],
                \\"LCurly\\": [
                  {
                    \\"image\\": \\"{\\",
                    \\"startOffset\\": 23,
                    \\"endOffset\\": 23,
                    \\"startLine\\": 2,
                    \\"endLine\\": 2,
                    \\"startColumn\\": 23,
                    \\"endColumn\\": 23,
                    \\"tokenTypeIdx\\": 13,
                    \\"tokenType\\": {
                      \\"name\\": \\"LCurly\\",
                      \\"PATTERN\\": {},
                      \\"tokenTypeIdx\\": 13,
                      \\"CATEGORIES\\": [],
                      \\"categoryMatches\\": [],
                      \\"categoryMatchesMap\\": {},
                      \\"isParent\\": false,
                      \\"LABEL\\": \\"{\\"
                    }
                  }
                ],
                \\"rules\\": [
                  {
                    \\"name\\": \\"Program\\",
                    \\"children\\": {
                      \\"rules\\": [
                        {
                          \\"name\\": \\"ProgramRule\\",
                          \\"children\\": {
                            \\"rules\\": [
                              {
                                \\"name\\": \\"Assignment\\",
                                \\"children\\": {
                                  \\"rules\\": [
                                    {
                                      \\"name\\": \\"ToRight\\",
                                      \\"children\\": {
                                        \\"head\\": [
                                          {
                                            \\"name\\": \\"LogicExpression\\",
                                            \\"children\\": {
                                              \\"rules\\": [
                                                {
                                                  \\"name\\": \\"RelationExpression\\",
                                                  \\"children\\": {
                                                    \\"rules\\": [
                                                      {
                                                        \\"name\\": \\"Expression\\",
                                                        \\"children\\": {
                                                          \\"rules\\": [
                                                            {
                                                              \\"name\\": \\"Term\\",
                                                              \\"children\\": {
                                                                \\"rules\\": [
                                                                  {
                                                                    \\"name\\": \\"PipeExpression\\",
                                                                    \\"children\\": {
                                                                      \\"from\\": [
                                                                        {
                                                                          \\"name\\": \\"RangeExpression\\",
                                                                          \\"children\\": {
                                                                            \\"rules\\": [
                                                                              {
                                                                                \\"name\\": \\"Factor\\",
                                                                                \\"children\\": {
                                                                                  \\"Identifier\\": [
                                                                                    {
                                                                                      \\"image\\": \\"str\\",
                                                                                      \\"startOffset\\": 31,
                                                                                      \\"endOffset\\": 33,
                                                                                      \\"startLine\\": 3,
                                                                                      \\"endLine\\": 3,
                                                                                      \\"startColumn\\": 7,
                                                                                      \\"endColumn\\": 9,
                                                                                      \\"tokenTypeIdx\\": 10,
                                                                                      \\"tokenType\\": {
                                                                                        \\"name\\": \\"Identifier\\",
                                                                                        \\"PATTERN\\": {},
                                                                                        \\"tokenTypeIdx\\": 10,
                                                                                        \\"CATEGORIES\\": [],
                                                                                        \\"categoryMatches\\": [],
                                                                                        \\"categoryMatchesMap\\": {},
                                                                                        \\"isParent\\": false
                                                                                      }
                                                                                    }
                                                                                  ]
                                                                                }
                                                                              }
                                                                            ]
                                                                          }
                                                                        }
                                                                      ],
                                                                      \\"PipeToken\\": [
                                                                        {
                                                                          \\"image\\": \\"|>\\",
                                                                          \\"startOffset\\": 35,
                                                                          \\"endOffset\\": 36,
                                                                          \\"startLine\\": 3,
                                                                          \\"endLine\\": 3,
                                                                          \\"startColumn\\": 11,
                                                                          \\"endColumn\\": 12,
                                                                          \\"tokenTypeIdx\\": 41,
                                                                          \\"tokenType\\": {
                                                                            \\"name\\": \\"PipeToken\\",
                                                                            \\"PATTERN\\": {},
                                                                            \\"tokenTypeIdx\\": 41,
                                                                            \\"CATEGORIES\\": [],
                                                                            \\"categoryMatches\\": [],
                                                                            \\"categoryMatchesMap\\": {},
                                                                            \\"isParent\\": false
                                                                          }
                                                                        }
                                                                      ],
                                                                      \\"tail\\": [
                                                                        {
                                                                          \\"name\\": \\"RangeExpression\\",
                                                                          \\"children\\": {
                                                                            \\"rules\\": [
                                                                              {
                                                                                \\"name\\": \\"Factor\\",
                                                                                \\"children\\": {
                                                                                  \\"Identifier\\": [
                                                                                    {
                                                                                      \\"image\\": \\"console\\",
                                                                                      \\"startOffset\\": 38,
                                                                                      \\"endOffset\\": 44,
                                                                                      \\"startLine\\": 3,
                                                                                      \\"endLine\\": 3,
                                                                                      \\"startColumn\\": 14,
                                                                                      \\"endColumn\\": 20,
                                                                                      \\"tokenTypeIdx\\": 10,
                                                                                      \\"tokenType\\": {
                                                                                        \\"name\\": \\"Identifier\\",
                                                                                        \\"PATTERN\\": {},
                                                                                        \\"tokenTypeIdx\\": 10,
                                                                                        \\"CATEGORIES\\": [],
                                                                                        \\"categoryMatches\\": [],
                                                                                        \\"categoryMatchesMap\\": {},
                                                                                        \\"isParent\\": false
                                                                                      }
                                                                                    }
                                                                                  ]
                                                                                }
                                                                              }
                                                                            ]
                                                                          }
                                                                        }
                                                                      ]
                                                                    }
                                                                  }
                                                                ]
                                                              }
                                                            }
                                                          ]
                                                        }
                                                      }
                                                    ]
                                                  }
                                                }
                                              ]
                                            }
                                          }
                                        ]
                                      }
                                    }
                                  ]
                                }
                              }
                            ]
                          }
                        }
                      ]
                    }
                  }
                ],
                \\"RCurly\\": [
                  {
                    \\"image\\": \\"}\\",
                    \\"startOffset\\": 50,
                    \\"endOffset\\": 50,
                    \\"startLine\\": 4,
                    \\"endLine\\": 4,
                    \\"startColumn\\": 5,
                    \\"endColumn\\": 5,
                    \\"tokenTypeIdx\\": 14,
                    \\"tokenType\\": {
                      \\"name\\": \\"RCurly\\",
                      \\"PATTERN\\": {},
                      \\"tokenTypeIdx\\": 14,
                      \\"CATEGORIES\\": [],
                      \\"categoryMatches\\": [],
                      \\"categoryMatchesMap\\": {},
                      \\"isParent\\": false,
                      \\"LABEL\\": \\"}\\"
                    }
                  }
                ]
              }
            }
          ]
        }
      },
      {
        \\"name\\": \\"ProgramRule\\",
        \\"children\\": {
          \\"rules\\": [
            {
              \\"name\\": \\"Assignment\\",
              \\"children\\": {
                \\"rules\\": [
                  {
                    \\"name\\": \\"ToRight\\",
                    \\"children\\": {
                      \\"head\\": [
                        {
                          \\"name\\": \\"LogicExpression\\",
                          \\"children\\": {
                            \\"rules\\": [
                              {
                                \\"name\\": \\"RelationExpression\\",
                                \\"children\\": {
                                  \\"rules\\": [
                                    {
                                      \\"name\\": \\"Expression\\",
                                      \\"children\\": {
                                        \\"rules\\": [
                                          {
                                            \\"name\\": \\"Term\\",
                                            \\"children\\": {
                                              \\"rules\\": [
                                                {
                                                  \\"name\\": \\"PipeExpression\\",
                                                  \\"children\\": {
                                                    \\"from\\": [
                                                      {
                                                        \\"name\\": \\"RangeExpression\\",
                                                        \\"children\\": {
                                                          \\"rules\\": [
                                                            {
                                                              \\"name\\": \\"Factor\\",
                                                              \\"children\\": {
                                                                \\"Object\\": [
                                                                  {
                                                                    \\"name\\": \\"Object\\",
                                                                    \\"children\\": {
                                                                      \\"LCurly\\": [
                                                                        {
                                                                          \\"image\\": \\"{\\",
                                                                          \\"startOffset\\": 56,
                                                                          \\"endOffset\\": 56,
                                                                          \\"startLine\\": 5,
                                                                          \\"endLine\\": 5,
                                                                          \\"startColumn\\": 5,
                                                                          \\"endColumn\\": 5,
                                                                          \\"tokenTypeIdx\\": 13,
                                                                          \\"tokenType\\": {
                                                                            \\"name\\": \\"LCurly\\",
                                                                            \\"PATTERN\\": {},
                                                                            \\"tokenTypeIdx\\": 13,
                                                                            \\"CATEGORIES\\": [],
                                                                            \\"categoryMatches\\": [],
                                                                            \\"categoryMatchesMap\\": {},
                                                                            \\"isParent\\": false,
                                                                            \\"LABEL\\": \\"{\\"
                                                                          }
                                                                        }
                                                                      ],
                                                                      \\"arguments\\": [
                                                                        {
                                                                          \\"name\\": \\"PipeArguments\\",
                                                                          \\"children\\": {
                                                                            \\"argument\\": [
                                                                              {
                                                                                \\"name\\": \\"PipeArgument\\",
                                                                                \\"children\\": {
                                                                                  \\"rules\\": [
                                                                                    {
                                                                                      \\"name\\": \\"LogicExpression\\",
                                                                                      \\"children\\": {
                                                                                        \\"rules\\": [
                                                                                          {
                                                                                            \\"name\\": \\"RelationExpression\\",
                                                                                            \\"children\\": {
                                                                                              \\"rules\\": [
                                                                                                {
                                                                                                  \\"name\\": \\"Expression\\",
                                                                                                  \\"children\\": {
                                                                                                    \\"rules\\": [
                                                                                                      {
                                                                                                        \\"name\\": \\"Term\\",
                                                                                                        \\"children\\": {
                                                                                                          \\"rules\\": [
                                                                                                            {
                                                                                                              \\"name\\": \\"PipeExpression\\",
                                                                                                              \\"children\\": {
                                                                                                                \\"from\\": [
                                                                                                                  {
                                                                                                                    \\"name\\": \\"RangeExpression\\",
                                                                                                                    \\"children\\": {
                                                                                                                      \\"rules\\": [
                                                                                                                        {
                                                                                                                          \\"name\\": \\"Factor\\",
                                                                                                                          \\"children\\": {
                                                                                                                            \\"StringLiteral\\": [
                                                                                                                              {
                                                                                                                                \\"image\\": \\"\\\\\\"str\\\\\\"\\",
                                                                                                                                \\"startOffset\\": 58,
                                                                                                                                \\"endOffset\\": 62,
                                                                                                                                \\"startLine\\": 5,
                                                                                                                                \\"endLine\\": 5,
                                                                                                                                \\"startColumn\\": 7,
                                                                                                                                \\"endColumn\\": 11,
                                                                                                                                \\"tokenTypeIdx\\": 4,
                                                                                                                                \\"tokenType\\": {
                                                                                                                                  \\"name\\": \\"StringLiteral\\",
                                                                                                                                  \\"PATTERN\\": {},
                                                                                                                                  \\"tokenTypeIdx\\": 4,
                                                                                                                                  \\"CATEGORIES\\": [],
                                                                                                                                  \\"categoryMatches\\": [],
                                                                                                                                  \\"categoryMatchesMap\\": {},
                                                                                                                                  \\"isParent\\": false
                                                                                                                                }
                                                                                                                              }
                                                                                                                            ]
                                                                                                                          }
                                                                                                                        }
                                                                                                                      ]
                                                                                                                    }
                                                                                                                  }
                                                                                                                ]
                                                                                                              }
                                                                                                            }
                                                                                                          ]
                                                                                                        }
                                                                                                      }
                                                                                                    ]
                                                                                                  }
                                                                                                }
                                                                                              ]
                                                                                            }
                                                                                          }
                                                                                        ]
                                                                                      }
                                                                                    }
                                                                                  ]
                                                                                }
                                                                              }
                                                                            ]
                                                                          }
                                                                        }
                                                                      ],
                                                                      \\"RCurly\\": [
                                                                        {
                                                                          \\"image\\": \\"}\\",
                                                                          \\"startOffset\\": 64,
                                                                          \\"endOffset\\": 64,
                                                                          \\"startLine\\": 5,
                                                                          \\"endLine\\": 5,
                                                                          \\"startColumn\\": 13,
                                                                          \\"endColumn\\": 13,
                                                                          \\"tokenTypeIdx\\": 14,
                                                                          \\"tokenType\\": {
                                                                            \\"name\\": \\"RCurly\\",
                                                                            \\"PATTERN\\": {},
                                                                            \\"tokenTypeIdx\\": 14,
                                                                            \\"CATEGORIES\\": [],
                                                                            \\"categoryMatches\\": [],
                                                                            \\"categoryMatchesMap\\": {},
                                                                            \\"isParent\\": false,
                                                                            \\"LABEL\\": \\"}\\"
                                                                          }
                                                                        }
                                                                      ]
                                                                    }
                                                                  }
                                                                ]
                                                              }
                                                            }
                                                          ]
                                                        }
                                                      }
                                                    ],
                                                    \\"PipeToken\\": [
                                                      {
                                                        \\"image\\": \\"|>\\",
                                                        \\"startOffset\\": 66,
                                                        \\"endOffset\\": 67,
                                                        \\"startLine\\": 5,
                                                        \\"endLine\\": 5,
                                                        \\"startColumn\\": 15,
                                                        \\"endColumn\\": 16,
                                                        \\"tokenTypeIdx\\": 41,
                                                        \\"tokenType\\": {
                                                          \\"name\\": \\"PipeToken\\",
                                                          \\"PATTERN\\": {},
                                                          \\"tokenTypeIdx\\": 41,
                                                          \\"CATEGORIES\\": [],
                                                          \\"categoryMatches\\": [],
                                                          \\"categoryMatchesMap\\": {},
                                                          \\"isParent\\": false
                                                        }
                                                      }
                                                    ],
                                                    \\"tail\\": [
                                                      {
                                                        \\"name\\": \\"RangeExpression\\",
                                                        \\"children\\": {
                                                          \\"rules\\": [
                                                            {
                                                              \\"name\\": \\"Factor\\",
                                                              \\"children\\": {
                                                                \\"Identifier\\": [
                                                                  {
                                                                    \\"image\\": \\"out\\",
                                                                    \\"startOffset\\": 69,
                                                                    \\"endOffset\\": 71,
                                                                    \\"startLine\\": 5,
                                                                    \\"endLine\\": 5,
                                                                    \\"startColumn\\": 18,
                                                                    \\"endColumn\\": 20,
                                                                    \\"tokenTypeIdx\\": 10,
                                                                    \\"tokenType\\": {
                                                                      \\"name\\": \\"Identifier\\",
                                                                      \\"PATTERN\\": {},
                                                                      \\"tokenTypeIdx\\": 10,
                                                                      \\"CATEGORIES\\": [],
                                                                      \\"categoryMatches\\": [],
                                                                      \\"categoryMatchesMap\\": {},
                                                                      \\"isParent\\": false
                                                                    }
                                                                  }
                                                                ]
                                                              }
                                                            }
                                                          ]
                                                        }
                                                      }
                                                    ]
                                                  }
                                                }
                                              ]
                                            }
                                          }
                                        ]
                                      }
                                    }
                                  ]
                                }
                              }
                            ]
                          }
                        }
                      ]
                    }
                  }
                ]
              }
            }
          ]
        }
      }
    ]
  }
}"
`;
